# Pokedex_API

./: .gitignore  README.md  docker-compose.yaml
pokedex_api/: Cargo.toml  Dockerfile
pokedex_api/pokedex_api/: Cargo.toml
pokedex_api/src/: main.rs
pokedex_web_app/: Dockerfile  README.md  package-lock.json  package.json
pokedex_web_app/src/: App.vue
