[package]
name = "pokedex_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
rustemon = { version = "*", default-features = false, features = ["in-memory-cache"] } 